--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="col-lg-1   col-md-1  col-1">
 	<div class="box">
-	 <div class="title">Chicken</div>
+	 <div class="title1">Chicken</div>
        <p>
 Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickensare famous
        </p>
@@ -24,7 +24,7 @@ Chicken is the most common type of poultry in the world. Owing to the relative e
 
 <div class="col-lg-2   col-md-2  col-2">
 <div class="box">
-     <div class="title">Beef</div>
+     <div class="title2">Beef</div>
       <p>
 Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients
      </p> 
@@ -34,7 +34,7 @@ Beef is the culinary name for meat from cattle, particularly skeletal muscle. Hu
 
 <div class="col-lg-3   col-md-3 col-3">
 <div class="box">
-   <div class="title">Sushi</div>
+   <div class="title3">Sushi</div>
  <p>  
 Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, vegetables, and occasionally tropical fruits</div>
     </p>
